v6 added Coches.net and AutoScout24 both also at the Landing Page

--- a/second-page.html
+++ b/second-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Second Page - Car List</title>
+    <title>AutoScout24 Scraper</title>
     <style>
         body {
             display: flex;
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Car List</h1>
+    <h1>AutoScout24 Car List</h1>
     <div class="search-section">
         <input type="text" id="carMake" placeholder="Enter car make">
         <input type="number" id="minPrice" placeholder="Min price (€)">
