--- a/third-page.html
+++ b/third-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Second Page - Car List</title>
+    <title>Coches.net Scraper</title>
     <style>
         body {
             display: flex;
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Car List</h1>
+    <h1>Coches.net Car List</h1>
     <div class="search-section">
         <input type="text" id="carMake" placeholder="Enter car make">
         <input type="number" id="minPrice" placeholder="Min price (€)">
@@ -114,56 +114,51 @@
                 allCars = [];
                 currentPage = 1;
                 totalPages = 0;
+                productTableBody.innerHTML = ''; // Clear existing rows
             }
 
             const carMake = document.getElementById('carMake').value;
-            const minPrice = document.getElementById('minPrice').value;
-            const maxPrice = document.getElementById('maxPrice').value;
-            const query = `/lst/${carMake}?atype=C&cy=E&damaged_listing=exclude&desc=0&powertype=kw&pricefrom=${minPrice}&priceto=${maxPrice}&search_id=1w1487tfnfp&sort=price&source=homepage_search-mask&ustate=N%2CU&limit=${itemsPerPage}`;
+            const minPrice = document.getElementById('minPrice').value || '0';
+            const maxPrice = document.getElementById('maxPrice').value || '1000000';
 
             try {
-                while (currentPage <= totalPages || totalPages === 0) {
-                    const result = await ipcRenderer.invoke('fetch-cars', query, currentPage, abortController.signal);
+                let fetchPage = 1;
+                while (true) {
+                    if (abortController.signal.aborted) {
+                        console.log('Fetch was cancelled');
+                        break;
+                    }
+
+                    const result = await ipcRenderer.invoke('fetch-cars-coches', carMake, minPrice, maxPrice, fetchPage);
                     console.log("Received result:", result);
 
                     if (result && result.cars && Array.isArray(result.cars)) {
                         allCars = allCars.concat(result.cars);
-                        totalPages = result.totalPages;
-                        currentPage = result.currentPage;
-                        displayCars();
+                        totalPages = Math.ceil(allCars.length / itemsPerPage);
+                        
+                        // Display the first page of results if it's a new search
+                        if (isNewSearch && fetchPage === 1) {
+                            displayCars(1);
+                        }
+                        
                         updatePageIndicator();
 
-                        if (currentPage >= totalPages) break;
-                        currentPage++;
+                        if (fetchPage >= result.totalPages) break;
+                        fetchPage++;
                     } else {
                         console.error('Cars data is missing, undefined, or not an array in the response:', result);
                         break;
                     }
-
-                    if (abortController.signal.aborted) break;
                 }
             } catch (error) {
-                if (error.name === 'AbortError') {
-                    console.log('Fetch was cancelled');
-                } else {
-                    console.error('Failed to fetch cars:', error);
-                }
+                console.error('Failed to fetch cars:', error);
             } finally {
                 finishFetching();
             }
         }
 
-        function finishFetching() {
-            isFetching = false;
-            fetchButton.style.display = 'inline-block';
-            cancelButton.style.display = 'none';
-            abortController = null;
-            console.log(`Total cars fetched: ${allCars.length}`);
-            updatePageIndicator();
-        }
-
-        function displayCars() {
-            const startIndex = (currentPage - 1) * itemsPerPage;
+        function displayCars(page) {
+            const startIndex = (page - 1) * itemsPerPage;
             const endIndex = startIndex + itemsPerPage;
             const carsToDisplay = allCars.slice(startIndex, endIndex);
 
@@ -176,7 +171,6 @@
                 const link = document.createElement('a');
 
                 titleCell.textContent = car.title;
-                // Format the price
                 const formattedPrice = car.price.replace(/[€,.-]/g, '').trim() + ' €';
                 priceCell.textContent = formattedPrice;
                 link.href = car.url;
@@ -189,6 +183,19 @@
                 row.appendChild(actionCell);
                 productTableBody.appendChild(row);
             });
+
+            currentPage = page;
+            updatePageIndicator();
+        }
+
+        function finishFetching() {
+            isFetching = false;
+            fetchButton.style.display = 'inline-block';
+            cancelButton.style.display = 'none';
+            abortController = null;
+            console.log(`Total cars fetched: ${allCars.length}`);
+            totalPages = Math.ceil(allCars.length / itemsPerPage);
+            updatePageIndicator();
         }
 
         function updatePageIndicator() {
@@ -205,17 +212,13 @@
 
         prevButton.addEventListener('click', () => {
             if (currentPage > 1) {
-                currentPage--;
-                displayCars();
-                updatePageIndicator();
+                displayCars(currentPage - 1);
             }
         });
 
         nextButton.addEventListener('click', () => {
             if (currentPage < totalPages) {
-                currentPage++;
-                displayCars();
-                updatePageIndicator();
+                displayCars(currentPage + 1);
             }
         });
 
